# mcp-server-docs

./: .gitignore  .mcp.json  404.html  Jenkinsfile  NOTICE  README.md  docker-compose.yml  index.html  make-docker-vector.sh  mkdocs.yml  pyproject.toml  requirements.txt  robots.txt  server_protocols.md  set_env.sh  sitemap.xml  zen_config.json
.github/workflows/: publish.yml
analytics-engine/: index.html  index.md
analytics-engine/prompts/: index.html
analytics-engine/resources/: index.html  index.md
analytics-engine/tools/: index.html
assets/stylesheets/: homepage-styles.css
authentication/: index.html
authentication/auth0/: index.html  index.md
authentication/keycloak/: index.html  index.md
docs/: .pages  index.md
docs/APIs/: index.md
docs/analytics-engine/: index.md
docs/analytics_engine/: .pages  index.md
docs/authentication/: index.md
docs/configuration/: index.md
docs/deployment/: index.md
docs/develop_with_mcp/: .pages  index.md
docs/get-started/: .pages  index.md
docs/get_started/: .pages  deployment.md  index.md
docs/hcl-informix/: .pages  index.md
docs/hcl_informix/: index.md
docs/informix/: .pages  index.md
docs/ingres/: .pages  index.md
docs/intro/: index.md
docs/javascripts/: MiniChatJavaScript.js  comprehensive-nav-mcp.js  comprehensive-nav.js
docs/mcp-clients/: .pages  index.md
docs/mcp_clients/: index.md
docs/nosql/: .pages  (+1 more)
get-started/: index.html
hcl-informix/: index.html
hooks/: bitbucket_edit_url.py  copy_md_sources.py  generate_comprehensive_nav.py  github_edit_url.py
ingres/: index.html  index.md
intro/: index.html  index.md
javascripts/: comprehensive-nav-mcp.js  comprehensive-nav-sections.js
mcp-clients/: index.html
nosql/: index.html  index.md
scripts/: generate_comprehensive_nav.py
search/: search_index.json
src/: conf_informix.json  conf_temp.json
stylesheets/: comprehensive-nav.css  extra.css  minichat.css
theme_overrides/: home-blocks.html  main.html
zen/: index.html
(+185 files in other folders)
