[project]
name = "actian-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "alokaj", email = "alba.lokaj@hcl-software.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp~=2.14.4",
]

[project.scripts]
actian-mcp-server = "actian_mcp_server:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "dbutils>=3.1.2",
    "pyodbc>=5.3.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-html>=4.1.1",
    "toons>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
